--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
 		<link rel="preconnect" href="https://fonts.gstatic.com">
+
+		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@300&display=swap" rel="stylesheet">
 
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r68/three.min.js'></script>
