updated footer links

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r68/three.min.js'></script>
 
-		<script src="https://kit.fontawesome.com/33a2976e14.js" ></script> <!-- crossorigin="anonymous" -->
+		<script src="https://kit.fontawesome.com/33a2976e14.js" crossorigin="anonymous"></script> <!-- crossorigin="anonymous" -->
 
 		<title>David Cottrell</title>
 	  </head>
