--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,13 @@
     	<meta charset="utf-8" />
     	<meta name="viewport" content="width=device-width, initial-scale=1" />
     	<meta name="theme-color" content="#000000" />
-        <meta name="author" content="David Cottrell">
+        <meta 
+            name="author" 
+            content="David Cottrell"
+        >
     	<meta
       		name="description"
-      		content="Web site created using create-react-app"
+      		content="David Cottrell's Web Portfolio"
     	/>
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
